# prediction_layer

./: CMakeLists.txt  Dockerfile  PredictionLayer.drawio  PredictionLayer_v2.0.drawio  README.md  costmap_plugins.xml  package.xml  prediction_layer_plugins.xml
cfg/: PredictionLayer.cfg
include/prediction_layer/: circle_to_circumscribe_polygon.h  dynamic_obstacle.h  dynamic_obstacles.h  obstacles_buffer.h  prediction_layer.h  transforms.h
msg/: PolygonBoundary.msg
src/: circle_to_circumscribe_polygon.cpp  obstacles_buffer.cpp  prediction_layer.cpp  transforms.cpp
test/: circle_to_circumscribe_polygon.py
