<?xml version="1.0"?>
<package format="2">
  <name>prediction_layer</name>
  <version>0.0.0</version>
  <description>The prediction_layer package</description>

  <maintainer email="ie5630jk@naver.com">OkDoky</maintainer>
  <author email="ie5630jk@naver.com">OkDoky</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rxros</build_depend> -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>obstacle_detector</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <!-- <build_export_depend>rxros</build_export_depend> -->
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>obstacle_detector</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <!-- <exec_depend>rxros</exec_depend> -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>obstacle_detector</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>


  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    <!-- <rviz plugin="${prefix}/rviz_plugins.xml"/> -->
  </export>
</package>
